--- a/Ionic - DailyPills/myApp/ionic.config.json
+++ b/Ionic - DailyPills/myApp/ionic.config.json
@@ -1,13 +1,5 @@
 {
-  "name": "myApp",
-  "integrations": {
-    "cordova": {}
-  },
-  "type": "angular",
-  "proxies": [
-    {
-      "path": "/api",
-      "proxyUrl": "http://localhost:8000"
-    }
-  ]
+  "name": "New Ionic App",
+  "integrations": {},
+  "type": "angular"
 }
