--- a/Ionic - DailyPills/myApp/package.json
+++ b/Ionic - DailyPills/myApp/package.json
@@ -27,6 +27,7 @@
     "@ionic/angular": "^4.1.0",
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "^2.2.0",
+    "@ngx-translate/core": "^11.0.1",
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-advanced-http": "2.1.1",
