--- a/Ionic - DailyPills/myApp/package.json
+++ b/Ionic - DailyPills/myApp/package.json
@@ -28,6 +28,7 @@
     "@ionic/pro": "2.0.4",
     "@ionic/storage": "^2.2.0",
     "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "cordova-android": "8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-plugin-advanced-http": "2.1.1",
